fix(modal): add body padding so input outlines dont get cut off

--- a/src/components/reusable/modal/modal.scss
+++ b/src/components/reusable/modal/modal.scss
@@ -165,5 +165,6 @@ h1 {
 .body {
   flex-grow: 1;
   overflow-y: auto;
-  padding-right: 24px;
+  margin: -4px;
+  padding: 4px 28px 4px 4px;
 }
